# python-ios-shared-code

./: LICENSE  README.md
Python/: .gitignore  ReadMe.txt  _pi.cp39-win_amd64.pyd  pi.c  piapprox_build.py  requirements.txt
Shared/: CMakeLists.txt  README.md  _pi_cffi.c  build_Linux.sh  build_windows_mingw.bat  build_windows_msvc.bat  dukicalculations.c  dukicalculations.h  main.c  shared.c  shared.h  tutorial.c  tutorial.cxx
Shared/MathFunctions/: CMakeLists.txt  MathFunctions.c  MathFunctions.cxx  MathFunctions.h  mysqrt.c  mysqrt.cxx  mysqrt.h
Shared/duki/: CMakeLists.txt
iOS/CDukiCalculations/: Package.swift  README.md  pkgConfig.pc
iOS/CDukiCalculations/Sources/CDukiCalculations/: CDukiCalculations.swift  ReadMe.txt  dukicalculations.c  dukicalculations.h  dukicalculations_EXPORTS.h  module.modulemap
iOS/CDukiCalculations/Tests/CDukiCalculationsTests/: CDukiCalculationsTests.swift
iOS/Duki.xcworkspace/: contents.xcworkspacedata
iOS/DukiApp/: DukiAppApp.swift
iOS/DukiApp.xcodeproj/: project.pbxproj
iOS/DukiApp.xcworkspace/: contents.xcworkspacedata
iOS/DukiApp.xcworkspace/xcshareddata/xcschemes/: CDukiCalculations.xcscheme
iOS/DukiApp/DukiApp/: ContentView.swift  DukiApp-Bridging-Header.h  DukiAppApp.swift
iOS/DukiApp/DukiApp.xcodeproj/: project.pbxproj
iOS/DukiApp/DukiApp.xcodeproj/xcshareddata/xcschemes/: DukiApp.xcscheme
old/Python/: pi_extension_build.py  piapprox_build.py
old/Shared/: CMakeLists.txt  README.md  shared.h
old/iOS/CDukiCalculations/Sources/CDukiCalculations/: dukicalculations.c
old/iOS/CDukiCalculations/Tests/CDukiCalculationsTests/: CDukiCalculationsTests.swift
old/iOS/DukiApp/: ContentView.swift
old/temp/: main.c  shared.c  shared.h  shared_EXPORTS.h
